code/web/interface/themes/responsive/css/main.css
/* ... */
@media (min-width: 1200px) {
  .home-page-browse-thumbnails {
    -webkit-column-count: 6;
    -moz-column-count: 6;
    column-count: 6;
  }
}
@media (min-width: 0) {
  .browse-thumbnails-few {
    -webkit-column-count: 1;
    -moz-column-count: 1;
    column-count: 1;
  }
}
@media (min-width: 480px) {
  .browse-thumbnails-few {
    -webkit-column-count: 1;
    -moz-column-count: 1;
    column-count: 1;
  }
}
@media (min-width: 992px) {
  .browse-thumbnails-few {
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
  }
}
@media (min-width: 1200px) {
  .browse-thumbnails-few {
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
  }
}
@media (min-width: 0) {
  .browse-thumbnails-medium {
    -webkit-column-count: 1;
    -moz-column-count: 1;
    column-count: 1;
  }
}
@media (min-width: 480px) {
  .browse-thumbnails-medium {
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
  }
}
@media (min-width: 768px) {
  .browse-thumbnails-medium {
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
  }
}
@media (min-width: 992px) {
  .browse-thumbnails-medium {
    -webkit-column-count: 3;
    -moz-column-count: 3;
    column-count: 3;
  }
}
@media (min-width: 1200px) {
  .browse-thumbnails-medium {
    -webkit-column-count: 4;
    -moz-column-count: 4;
    column-count: 4;
  }
}
@media (min-width: 0) {
  .home-page-browse-grid {
    -webkit-column-count: 1;
    -moz-column-count: 1;
    column-count: 1;
  }
}
@media (min-width: 480px) and (max-width: 767px) {
  .home-page-browse-grid {
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
  }
}
@media (min-width: 768px) {
  .home-page-browse-grid {
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
  }
}
@media (min-width: 992px) {
  .home-page-browse-grid {
    -webkit-column-count: 3;
    -moz-column-count: 3;
    column-count: 3;
  }
}
.browse-thumbnail {
  display: block;
  padding: 4px;
  margin-bottom: 20px;
  line-height: 1.42857143;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 4px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  break-inside: avoid-column;
  -webkit-column-break-inside: avoid;
  display: inline-block;
  text-align: center;
}
.browse-thumbnail > img,
.browse-thumbnail a > img {
  display: block;
  max-width: 100%;
  height: auto;
  margin-left: auto;
  margin-right: auto;
}
a.browse-thumbnail:hover,
a.browse-thumbnail:focus,
a.browse-thumbnail.active {
  border-color: #428bca;
}
.browse-thumbnail .caption {
  padding: 9px;
  color: #333333;
}
.browse-thumbnail img {
  width: 100%;
}
.browse-thumbnail-sorted {
  display: block;
  padding: 4px;
  margin-bottom: 20px;
  line-height: 1.42857143;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 4px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  border-width: 0;
  height: 210px;
  overflow: hidden;
  text-align: center;
}
.browse-thumbnail-sorted > img,
.browse-thumbnail-sorted a > img {
  display: block;
  max-width: 100%;
  height: auto;
  margin-left: auto;
  margin-right: auto;
}
a.browse-thumbnail-sorted:hover,
a.browse-thumbnail-sorted:focus,
a.browse-thumbnail-sorted.active {
  border-color: #428bca;
}
.browse-thumbnail-sorted .caption {
  padding: 9px;
  color: #333333;
}
.browse-thumbnail-sorted img {
  max-height: 150px;
}
.browse-list {
  break-inside: avoid-column;
  -webkit-column-break-inside: avoid;
  display: inline-block;
  text-align: left;
  width: 100%;
}
.browse-list img {
  padding: 4px;
  line-height: 1.42857143;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 4px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: inline-block;
  max-width: 100%;
  height: auto;
  float: left;
  margin: 0 4px 10px 0;
  width: 80px;
  border-radius: 3px;
}
#more-browse-results {
  background-color: #e6e6e6;
  color: #c7c9ca;
  text-align: center;
  padding: 2px;
  cursor: pointer;
  border-radius: 4px;
  line-height: 0;
}
#more-browse-results span {
  font-weight: bold;
  font-size: 33px;
}
#browse-sub-category-menu {
  margin-top: 10px;
}
#browse-sub-category-menu button {
  margin-right: 5px;
}
#browse-sub-category-menu button.selected {
  color: #fff;
  background-color: #0d8ec7;
}
#browse-sub-category-menu button:focus {
  outline: none;
}
.selected-browse-sub-category-label-search-text::before {
  content: ' \00bb \00a0';
}
#account-settings-accordion .panel-group .panel + .panel {
  margin-top: 0;
}
#account-settings-accordion .panel-heading {
  padding: 5px 15px;
  background: #e7e7e7;
  border-bottom: 1px solid #a1a1a1;
}
#account-settings-accordion .active .panel-heading {
  background: #4dacde;
}
#account-settings-accordion .panel-title {
  font-size: 13px;
  color: #333333;
}
#account-link-accordion .panel.active .panel-title,
account-settings-accordion .panel.active .panel-title {
  color: white;
}
#account-link-accordion .panel.active .panel-title > a,
account-settings-accordion .panel.active .panel-title > a {
  color: white;
}
#account-settings-accordion .panel-body {
  font-size: 12px;
  color: #333333;
  background-color: #fcfcfc;
  border-color: #c5c5c5;
  border-width: 0 1px 1px 1px;
  border-style: solid;
}
.overdueLabel {
  color: red;
  font-weight: bold;
}
.dueSoonLabel {
  color: #e58e29;
  font-weight: bold;
}
.holdDisclaimerLibrary {
  font-weight: bold;
}
#mobileHeader .myAccountLink {
  font-weight: bold;
  font-size: 18px;
}
#contactUpdateForm .btn-group .btn-default.active {
  background-color: #428bca;
  -webkit-box-shadow: none;
  box-shadow: none;
  color: #fff;
}
/**
 * Additional Styling related to the help system
 */
.faqQuestion {
  font-size: medium;
  color: blue;
  font-weight: bold;
  margin-top: 15px;
}
.faqAnswer {
  font-size: small;
  font-style: italic;
  margin-left: 1em;
}
/* ... */

